fixed alignment issue in mobile

--- a/resources/stylesheets/css/header.css
+++ b/resources/stylesheets/css/header.css
@@ -49,7 +49,7 @@ header.collapsed img {
 /********************
        MOBILE
 ********************/
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 900px) {
   header {
     width: 100vw;
   }
