--- a/resources/stylesheets/scss/main.scss
+++ b/resources/stylesheets/scss/main.scss
@@ -356,7 +356,7 @@ footer {
 /********************
        MOBILE
 ********************/
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 900px) {
   body {
     padding-left: 0;
   }
